Added Toshi's about image

--- a/about.html
+++ b/about.html
@@ -112,6 +112,9 @@
         <div class="inner-card"></div>
       </div>
       <div class="card"><p class="description">Toshi – Created the project logo, blending visual clarity with symbolic depth to represent content safety and AI-driven moderation. Also contributed design insights to maintain brand consistency across the app.</p></div>
+      <div class="card">
+        <div class="inner-card"><img class="images" src = "images/toshi.jpg"></div>
+      </div>
     </div>
 
     <div class="frame">
@@ -124,3 +127,4 @@
 
 </body>
 </html>
+
