--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="header">
-        <div class="name" style="margin-left: 5px;">Content Guard</div>
+        <div class="name" style="margin-left: 10px;">Content Guard</div>
         <div class="right_menu">
             <div class="about">
-                <a class="link" href="/about" target="_blank">About</a>
+                <a class="link" href="/about.html">About</a>
             </div>
             <div class="github">
                 <a class="link" href="https://github.com/Prashray21/ContentGuard" target="_blank">Github</a>
