--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
         <div class="details">
             <div class="left">
                 <div class="left_men">
-                    <img src="img/prashray.jpg" alt="">
+                    <img src="img/prashray.jpeg" alt="">
                     <div class="mem_name">Prashray Sharma</div>
                 </div>
             </div>
@@ -78,3 +78,4 @@
 </body>
 
 </html>
+
