--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="right_menu">
             <div class="about">
-                <a class="link" href="/about.html">About</a>
+                <a class="link" href="about.html">About</a>
             </div>
             <div class="github">
                 <a class="link" href="https://github.com/Prashray21/ContentGuard" target="_blank">Github</a>
@@ -46,3 +46,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
